--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitcoin-scout-waiting-list",
-  "homepage": "https://orange-label.github.io/scout-waiting-list",
+  "homepage": "https://bscout.io",
   "version": "5.0.0",
   "private": true,
   "scripts": {
@@ -21,5 +21,9 @@
   "devDependencies": {
     "@vitejs/plugin-react": "latest",
     "vite": "latest"
+  },
+  "engines": {
+    "node": ">= 18"
+ 
   }
 }
